--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rimraf dist && tsc index.ts --outDir dist"
+    "build": "rimraf dist && tsc index.tsx --outDir dist"
   },
   "dependencies": {
     "@types/react": "^18.0.27",
     "react": "^18.2.0",
+    "typescript": "^4.9.5",
     "utils": "^1.0.0"
   },
   "keywords": [],
