--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "pnpm -r --filter=./packages/* run build"
+    "build": "pnpm -r --filter=./packages/* run build",
+    "watch": "pnpm --parallel -r run watch"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "rimraf": "^4.1.2",
     "tsc": "^2.0.4",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.26.0"
   }
 }
