fix: 修改仓库名

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo-workspace",
+  "name": "wj-demo-monorepo-workspace",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
