fix: 修改仓库名

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "utils",
+  "name": "wj-demo-monorepo-workspace/utils",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
