--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "pnpm -r --filter=./packages/* run build",
-    "watch": "pnpm --parallel -r run watch"
+    "watch": "pnpm --parallel -r run watch",
+    "publish": "pnpm changeset publish"
   },
   "keywords": [],
   "author": "",
